--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/guepardo.gif" class="d-block w-100" alt="...">
+            <img src="guepardo.gif" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/mamaconbebes.gif" class="d-block w-100" alt="...">
+            <img src="mamaconbebes.gif" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/gorgo.gif" class="d-block w-100" alt="...">
+            <img src="gorgo.gif" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
